--- a/package.json
+++ b/package.json
@@ -29,10 +29,11 @@
     "axios": "^0.16.1",
     "fs-extra": "^7.0.0",
     "iconv-lite": "^0.4.23",
-    "iview": "^2.14.3",
+    "iview": "^3.0.0",
     "lodash": "^4.17.10",
     "lodash-id": "^0.14.0",
     "lowdb": "^1.0.0",
+    "shortid": "^2.2.12",
     "vue": "^2.3.3",
     "vue-electron": "^1.0.6",
     "vue-router": "^2.5.3",
