update version and description

--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "writer-tool",
   "productName": "writer-tool",
-  "version": "0.0.0",
+  "version": "0.2",
   "author": "qimengjie@163.com",
-  "description": "An electron-vue project",
+  "description": "一款为作家准备的生产力工具，支持txt阅读，支持收集优美词汇和优秀桥段，支持灵感速记，同时还支持对以上内容进行分门别类，并以树形图的形式进行预览。A productivity tool for writers, supports txt reading, supports the collection of beautiful vocabulary and excellent bridges, supports inspiration shorthand, and also supports the classification of the above content, and previews in the form of a tree.",
   "license": null,
   "main": "./dist/electron/main.js",
   "scripts": {
