--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "writerTool",
+  "name": "writer-tool",
   "productName": "writerTool",
   "version": "v0.2.0",
   "author": "qimengjie@163.com",
